--- a/package.json
+++ b/package.json
@@ -1,40 +1,47 @@
 {
-    "name": "mern-auth",
-    "version": "1.0.0",
-    "type": "module",
-    "description": "MERN authentication system",
-    "main": "server.js",
-    "scripts": {
-        "start": "nodemon start",
-        "server": "nodemon backend/server.js",
-        "client": "npm run dev --prefix frontend",
-        "dev": "concurrently \"npm run server\" \"npm run client\""
-    },
-    "author": "Brad Traversy",
-    "license": "MIT",
-    "dependencies": {
-        "axios": "^1.8.3",
-        "bcryptjs": "^2.4.3",
-        "cookie-parser": "^1.4.6",
-        "cors": "^2.8.5",
-        "date-fns": "^4.1.0",
-        "dotenv": "^16.0.3",
-        "express": "^4.18.2",
-        "express-async-handler": "^1.2.0",
-        "form-data": "^4.0.4",
-        "jsonwebtoken": "^9.0.0",
-        "mongoose": "^7.1.0",
-        "multer": "^1.4.5-lts.1",
-        "node-cron": "^3.0.3",
-        "node-fetch": "^3.3.2",
-        "nodemailer": "^6.10.0",
-        "resend": "^6.1.2",
-        "stripe": "^18.5.0",
-        "uuid": "^11.1.0"
-    },
-    "devDependencies": {
-        "concurrently": "^8.0.1",
-        "nodemon": "^2.0.22"
-    },
-    "proxy": "http://localhost:5000"
+  "name": "mern-auth",
+  "version": "1.0.0",
+  "type": "module",
+  "description": "MERN authentication system",
+  "main": "server.js",
+  "scripts": {
+    "start": "nodemon start",
+    "server": "nodemon backend/server.js",
+    "client": "npm run dev --prefix frontend",
+    "dev": "concurrently \"npm run server\" \"npm run client\"",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix",
+    "format": "prettier --write .",
+    "format:check": "prettier --check ."
+  },
+  "author": "Brad Traversy",
+  "license": "MIT",
+  "dependencies": {
+    "axios": "^1.8.3",
+    "bcryptjs": "^2.4.3",
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
+    "date-fns": "^4.1.0",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "express-async-handler": "^1.2.0",
+    "form-data": "^4.0.4",
+    "jsonwebtoken": "^9.0.0",
+    "mongoose": "^7.1.0",
+    "multer": "^1.4.5-lts.1",
+    "node-cron": "^3.0.3",
+    "node-fetch": "^3.3.2",
+    "nodemailer": "^6.10.0",
+    "resend": "^6.1.2",
+    "stripe": "^18.5.0",
+    "uuid": "^11.1.0"
+  },
+  "devDependencies": {
+    "concurrently": "^8.0.1",
+    "nodemon": "^2.0.22",
+    "eslint": "^8.57.1",
+    "eslint-config-prettier": "^9.1.0",
+    "prettier": "^3.3.3"
+  },
+  "proxy": "http://localhost:5000"
 }
