--- a/package.json
+++ b/package.json
@@ -19,13 +19,15 @@
   "dependencies": {
     "axios": "^1.12.0",
     "bcryptjs": "^2.4.3",
-    "cookie-parser": "^1.4.6",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "date-fns": "^4.1.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
+    "express-rate-limit": "^8.2.1",
     "form-data": "^4.0.4",
+    "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.1.0",
     "multer": "^2.0.2",
@@ -38,9 +40,9 @@
   },
   "devDependencies": {
     "concurrently": "^8.0.1",
-    "nodemon": "^2.0.22",
     "eslint": "^8.57.1",
     "eslint-config-prettier": "^9.1.0",
+    "nodemon": "^2.0.22",
     "prettier": "^3.3.3"
   },
   "proxy": "http://localhost:5000"
