Fixed the login issues and login successfully

--- a/.env.example
+++ b/.env.example
@@ -16,6 +16,9 @@ JWT_EXPIRE=30d
 # Stripe Configuration
 STRIPE_PUBLIC_KEY=pk_test_your_stripe_public_key
 STRIPE_SECRET_KEY=sk_test_your_stripe_secret_key
+STRIPE_PRICE_ID=price_your_default_price_id
+STRIPE_MONTHLY_PRICE_ID=price_your_monthly_price_id
+STRIPE_YEARLY_PRICE_ID=price_your_yearly_price_id
 STRIPE_WEBHOOK_SECRET=whsec_your_webhook_secret
 
 # Email Configuration (Nodemailer)
