--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "MERN authentication system",
   "main": "server.js",
   "scripts": {
-    "start": "nodemon start",
+    "start": "node server.js",
     "server": "nodemon backend/server.js",
     "client": "npm run dev --prefix frontend",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
